--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -8,5 +8,15 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-</body>
+  <script>
+    (function(i,s,o,g,r,a,m){
+      i['GoogleAnalyticsObject'] = r;
+      i[r]=i[r]||function(){
+                              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*newDate();
+                              a=s.createElement(o),m=s.getElementsByTagName(o)[0];
+                              a.async=1;
+                              a.src=g;
+                              m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  </script>  
+ </body>
 </html>
