--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Manager</title>
+  <script data-ad-client="ca-pub-5982337967613086" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
